fix:wrap -webkit-appearance: none

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ canvas.deepar {
   font-family: Helvetica, Arial, ヒラギノ角ゴ Pro, Hiragino Kaku Gothic Pro,
     YuGothic, 游ゴシック体, メイリオ, Meiryo, sans-serif;
   text-align-last: center;
+  -webkit-appearance: none;
 }
 
 #canvas {
